# espd_gost_19_kit

./: .gitignore  CMakeLists.txt  KNOWN_ISSUES  LICENSE  README.md  clear_build_dir.sh  clear_output_dir.sh  find_word.sh  rebuild.sh  replace_word.sh  script.cmake  tex_studio_profile
documents/: abbreviations.tex  algo.tex  bibliography.bib  bibliography_gost19.bib  bibliography_gost2.bib  bibliography_gost7.bib  espd.cls  preamble.tex
documents/common/: аббревиатуры.tex  алгоритм_методы_и_принципы.tex  алгоритм_структурная_схема.tex  алгоритм_этапы.tex  входные_данные.tex  вызов_и_загрузка.tex  выходные_данные.tex  записи_системного_лога.tex  запуск_программы.tex  назначение.tex  настройка_программы.tex  обозначение.tex  обозначение_и_наименование.tex  основание.tex  проверка_программы.tex  программная_документация.tex  решаемые_задачи.tex  связи_программы.tex  состав_входной_информации.tex  состав_выходной_информации.tex  технические_и_программные_средства.tex  функциональные_ограничения.tex  язык_исходников.tex
documents/data_protocol/: CMakeLists.txt  data_protocol.tex
documents/data_protocol/src/: аннотация.tex  входные_и_выходные_данные.tex
documents/example/: CMakeLists.txt  bibliography.bib  example.tex  example_lu.tex
documents/example/src/: аннотация.tex  введение.tex  оформление_алгоритмов.tex  оформление_иллюстраций.tex  оформление_листингов.tex  оформление_перечислений.tex  оформление_разделов.tex  оформление_таблиц.tex  оформление_формул.tex  приложение_1.tex  приложение_2.tex
documents/explanatory_note/: CMakeLists.txt  bibliography.bib  explanatory_note.tex  explanatory_note_lu.tex
documents/explanatory_note/src/: аннотация.tex  введение.tex  назначение.tex  перечень_функциональных_объектов.tex  технико_экономические_показатели.tex  технические_характеристики.tex
documents/functional_objects/: CMakeLists.txt  extract_functional_objects.sh  extract_functional_objects_brief.sh  move_functional_objects.sh
documents/iul/: CMakeLists.txt  iul.odt  iul.tex
documents/iul_easy/: CMakeLists.txt  iul_template.odt  replace_checksum.sh
documents/operator_manual/: CMakeLists.txt  bibliography.bib  operator_manual.tex  operator_manual_lu.tex
documents/operator_manual/src/: аббревиатуры.tex  аннотация.tex  выполнение_программы.tex  назначение_программы.tex  сообщения_оператору.tex  условия_выполнения.tex
documents/program_description/: CMakeLists.txt  bibliography.bib  program_description.tex  program_description_lu.tex
documents/program_description/src/: аннотация.tex  вызов_и_загрузка.tex  используемые_технические_средства.tex  общие_сведения.tex  описание_логической_структуры.tex  функциональное_назначение.tex
documents/specification/: CMakeLists.txt  specification.tex  specification_lu.tex
documents/sysadmin_manual/: CMakeLists.txt  bibliography.bib  sysadmin_manual.tex  sysadmin_manual_lu.tex
documents/sysadmin_manual/src/: аннотация.tex  дополнительные_возможности.tex  компиляция_и_установка.tex  настройка_программы.tex  общие_сведения.tex  проверка_программы.tex  сообщения_системному_программисту.tex  структура_программы.tex
documents/technical_task/: CMakeLists.txt  bibliography.bib  technical_task.tex  technical_task_lu.tex
documents/technical_task/src/: аббревиатуры.tex  аннотация.tex  введение.tex  основание_и_назначение.tex  порядок_контроля_и_приемки.tex  стадии_и_этапы_разработки.tex  технико_экономические_показатели.tex  требования_к_комплексу.tex  требования_к_программной_документации.tex
documents/testing_methodics/: CMakeLists.txt  bibliography.bib  testing_methodics.tex  testing_methodics_lu.tex
documents/testing_methodics/src/: аннотация.tex  методы_испытаний.tex  объект_испытаний.tex  состав_и_порядок_испытаний.tex  требования_к_программе.tex  требования_к_программной_документации.tex  цель_испытаний.tex
documents/text_program/: CMakeLists.txt  do_zip_text_program.sh  move_zip_text_program.sh
documents/usage_description/: CMakeLists.txt  bibliography.bib  usage_description.tex  usage_description_lu.tex
documents/usage_description/src/: аннотация.tex  входные_и_выходные_данные.tex  назначение_программы.tex  описание_задачи.tex  условия_применения.tex
output/: АБВГ.ХХХХХ-01 12 01.gost
